--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul class="nav-links">
 					<li><a class="nav-link" href="#">Specs</a></li>
 					<li><a class="nav-link" href="#">Products</a></li>
-					<li><a class="nav-link" href="#">Contact</a></li>
+					<li><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 			<div class="cart">
